src/css/header.scss
.header__wrapper {
    width: 100%;
    min-height: 95px;
    background-image: linear-gradient(to bottom, #333b45, #3d454f); 
}


.header {
    margin: 0 auto;
    padding: 0;
    max-width: 942px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 95px;
}

.header__logo{
    all: initial;
    font-family: "Open Sans";
    font-size: 22px;
    font-weight: bolder;
    font-weight: 900;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    
    color: #ff6868;
    text-transform: uppercase;

    a:visited, a:link, a:active{
        color: #ff6868;
        text-decoration: none;
    }

    @media(max-width: 942px) {
        margin-left: 25px;
    }
}

.header__horizontal__nav{
    ul{

        display: flex;
        align-items: center;
        justify-content: center;
        list-style: none;
    }

    
    ul > li{
        margin: 0; 
        padding: 0;
    }
    ul > li > a{
        margin-left: 10px;
        text-transform: uppercase;
        text-decoration: none;
    }

    a:visited{color:white;}
    a:link{color:white;}

    width: 374px;
    height: 12px;
    font-family: 'Open Sans';
    font-size: 14px;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #ffffff;

    @media(max-width: 500px) {
        display: none;
    }
}


.header__menu {
    display: none;
    width: 50px;
    height: 21px;
    cursor: pointer;
    & > div {
        width: 30px;
        height: 5px;
        border-radius: 5px;
        transition: 0.4s;
        background-color: white;
        &:first-child,
        &:last-child {
        margin: 4px 0;
        }
    }

    &.isOpen {
        div:nth-child(2) {
          margin-top: -9px;
          transform: rotate(135deg);
        }
        div:first-child {
          transform: rotate(45deg);
        }
        div:last-child {
          display: none;
        }

        transition: all 0.2s ease;
    }

    @media(max-width: 500px) {
        display: block;
    }
}


.header_mobile_menu {
    background-color: white;
    width: 100%;
    height: 220px;
    
    ul {
        list-style: none;
        display: flex;
        flex-direction: column;
        all: initial;
        
    }
    li {  
        padding: 10px 0;
        text-align: center;
        width: 100%;
        font-family: "Open Sans";
        text-transform: uppercase;
        a:visited, a:link , a:active {
            color: black;
            text-decoration: none;
            
        }
        a:hover{
            text-decoration: underline;
        }
    }

    transition: all 0.5s ease;
}

.header_mobile_menu_close {
    height: 0;
    visibility: hidden;
    ul {
        visibility: hidden;
    }
    ul li {
        visibility: hidden;
    }
    transition: all 0.5s ease;
}

